src/styles/style.css
/** CSS STYLE **/

:root {
    --white: #fff;
    --half-white: #d7ccc0;
    --light: #f5f4f0;
    --main: #fe8a02;
    --button-hover: #ea7600;
    --main-dark: #42413c;
    --dark: #2a2626;
    --half-dark: #908d8b;
    --brown: #b09a81;
    --blue: #1085c5;
}

@font-face {
    font-family: 'Neucha';
    src: url('../assets/fonts/Neucha-Regular.ttf');
}

@font-face {
    font-weight: normal;
    font-family: 'OpenSans';
    src: url('../assets/fonts/OpenSans-Regular.ttf');
}

@font-face {
    font-weight: bold;
    font-family: 'OpenSans';
    src: url('../assets/fonts/OpenSans-Bold.ttf');
}

@font-face {
    font-style: italic;
    font-family: 'OpenSans';
    src: url('../assets/fonts/OpenSans-Italic.ttf');
}

body {
    margin: 0;
}

.text {
    text-align: left;
    font-family: 'OpenSans', sans-serif;
    font-size: 16px;
    line-height: 1.6em;
    color: var(--dark);
}

.heading {
    position: absolute;
    margin-top: 0;
    margin-bottom: 0;
    font-family: 'Neucha', sans-serif;
    font-weight: normal;
    line-height: 1.2em;
    text-align: left;   
}

.z-2 {
    z-index: 2;
}

.orange {
    color: var(--main);
}

.black {
    color: var(--dark);
}

.white {
    color: var(--white);
}

.half-dark {
    color: var(--half-dark);
}

h1 {
    font-size: 72px;
}

h2 {
    font-size: 60px;
}

h3 {
    font-size: 34px;
}

.section {
    position: relative;
    width: 1110px;
    text-align: center;
    padding-top: 100px;
    padding-bottom: 100px;
    padding-left: 165px;
    padding-right: 165px;
}

.section::before {
    position: absolute;
    top: 0;
    left: 0;
    background-image: url('../images/background.png');
    width: 1440px;
	height: 914px;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 10%;
    content: '';
}

.img-main {
    position: absolute;
    height: 525px;
    top: 55px;
    left: 461px;
    z-index: 1;
    overflow: hidden;
}

.img-1 {
    filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 0.15));
    vertical-align: middle;
}

.flex-container {
    display: flex;
    align-items: flex-end;    
}

.pt-443 {
    padding-top: 443px;
}

.left-text {
    max-width: 540px;
    height: 141px;
    margin-right: 30px;
    margin-top: 50px;
}

.right-text {
    max-width: 540px;
    height: 141px;   
}

.button {
    position: absolute;
    left: 735px;
    top: 800px;
    padding: 12px 24px 12px 24px;
    background-color: var(--main);
    font-weight: bold;
    font-size: 16px;
    border: none;
}

.button:hover {
    background-color: var(--button-hover);
}

.button a {
    color: var(--white);
    font-family: 'OpenSans', sans-serif;
    text-decoration: none;
}

section.no-background::before {
    content: none;
}

.no-background {
    background: var(--white);
}

.light-background {
    background: var(--light);
}

.text-center {
    position: relative;
    text-align: center;
}

.video {
    position: relative;
    filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

.mb-30 {
    margin-bottom: 30px;
}

.mb-0 {
    margin: 0;
}

#navigation {
    background: var(--main-dark);
    top: -200px;
    padding-top: 200px;
}

#navigation>.flex-container>div {
    width: 302px;
    padding: 24px;
    margin: 15px 15px;
    
}

#navigation>.flex-container>div a {
    text-decoration: none;
    color: var(--dark);
}

#navigation .flex-container {
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: stretch;
    margin: -15px -15px;
}

#navigation .flex-container .light-background:hover {
    background-color: var(--main);
}

#navigation .flex-container .light-background:hover div {
    color: var(--white);
}

#navigation .flex-container .light-background:hover .orange {
    color: var(--white);
}
.fsize-52 {
    font-size: 52px;
}

.fsize-34 {
    font-size: 34px;
}

.number {
    margin-bottom: 40px;
    text-align: left;
    font-size: 64px;
    font-family: 'Neucha', sans-serif;
    line-height: 1;
}

.relative {
    position: relative;
}

.mtop-1em {
    margin-top: 1em;
}

.biases {
    font-size: 24px;
    font-family: 'Neucha', sans-serif;
    line-height: 1.2;
}

#ikea-effect {
    top: -200px;
}

#ikea-effect .flex-container {
    /* flex-wrap: wrap; */
    justify-content: flex-start;
    align-items: stretch;
    margin: 0 -15px;
}

#ikea-effect .flex-container div {
    margin: 0 15px;
}

.width-502 {
    width: 502px;
}

.brown-background {
    background-color: var(--brown);
}

.how-appears {
    margin-top: 100px;
    margin-bottom: 20px;
    padding: 6px;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.2;
}

.columns {
    column-count: 2;
    column-gap: 30px;
}

